ingress/2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: center
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: deployment
